more classifieds background images; a bit more classifieds headline text

--- a/src/data/grammar/images/assets/art.yaml
+++ b/src/data/grammar/images/assets/art.yaml
@@ -46,3 +46,26 @@ art700x420:
 - ./data/images/700x420/art_20.jpg
 - ./data/images/700x420/art_21.jpg
 - ./data/images/700x420/art_22.jpg
+- ./data/images/700x420/Baron-Von-Count-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Burning-Suns-Avatar-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Chart-a-Course-Ixalan-Spoiler.jpg
+- ./data/images/700x420/Conquerors-Foothold-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Deadeye-Plunderers-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Extremely-Slow-Zombie-3-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Hammer-Helper-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Incite-Insight-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Less-is-More-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Lonely-Sandbar-MtG-Art.jpg
+- ./data/images/700x420/Masterful-Ninja-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Opt-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Rowdy-Crew-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Rules-Lawyer-Promo-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Side-Quest-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Star-of-Extinction-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Sun-Crowned-Hunters-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Time-Out-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Tishana-Voice-of-Thunder-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Treasure-Cove-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Wanted-Scoundrels-Ixalan-MtG-Art.jpg
+- ./data/images/700x420/Willing-Test-Subject-Unstable-MtG-Art.jpg
+- ./data/images/700x420/Zealous-Persecution-MtG-Art.jpg
