--- a/src/data/grammar/vocab/numbers.yaml
+++ b/src/data/grammar/vocab/numbers.yaml
@@ -85,6 +85,10 @@
         "#num2-9#",
         "#num1-9##num0-9#"
     ],
+    "priceUSDCheap": [
+        "$#num1-9#",
+        "$#num1-9#.#num0-9##num0-9#",
+    ],
     "priceUSD": [
         "$#num1-9#",
         "$#num1-9#",
@@ -98,7 +102,7 @@
         "$#num1-999#.#num0-9##num0-9#"
     ],
     "priceTix": [
-        "#num1-9# event tickets", "#num1-9##num0-9# event tickets"
+        "#num1-9# event tickets", "#num1-12# event tickets", "#num1-9##num0-9# event tickets"
     ],
     "num0-9": ["0","1","2","3","4","5","6","7","8","9"],
     "num1-9": ["1","2","3","4","5","6","7","8","9"],
