--- a/src/data/grammar/vocab/pronouns.yaml
+++ b/src/data/grammar/vocab/pronouns.yaml
@@ -1,15 +1,15 @@
 {
   "malePronouns": [
-      "[they:he][theirs:his][their:his][them:him][are:is][has:has][themselves:himself][possessive:'s]"
+      "[they:he][theirs:his][their:his][them:him][are:is][has:has][themselves:himself][possessive:'s][s:s]"
   ],
   "femalePronouns": [
-      "[they:she][theirs:hers][their:her][them:her][are:is][has:has][themselves:herself][possessive:'s]"
+      "[they:she][theirs:hers][their:her][them:her][are:is][has:has][themselves:herself][possessive:'s][s:s]"
   ],
   "pluralPronouns": [
-      "[they:they][theirs:theirs][their:their][them:them][are:are][has:have][themselves:themselves][possessive:']"
+      "[they:they][theirs:theirs][their:their][them:them][are:are][has:have][themselves:themselves][possessive:'][s:#they.noop#]"
   ],
   "neutralPronouns": [
-      "[they:it][theirs:theirs][their:its][them:it][are:is][has:has][themselves:itself][possessive:'s]"
+      "[they:it][theirs:theirs][their:its][them:it][are:is][has:has][themselves:itself][possessive:'s][s:s]"
   ],
   "genderedPronouns": [
     "#malePronouns#",
