--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -189,7 +189,8 @@
   	"Nasrin",
   	"Rutstein",
   	"Stromkirk",
-  	"Wauki"
+  	"Wauki",
+    "#itemNounOrMassNoun.noSpaces.capitalize#[_suffix:bane,sbane]#_suffix#"
   ],
   "npcCharacter": [
   	"#commonCharacterFirstName# the #adj.capitalize#",
@@ -212,6 +213,7 @@
     "destroyer",
   	"elder",
   	"evincar",
+    "heretic",
   	"lunarch",
   	"noble",
   	"sensei",
@@ -222,7 +224,8 @@
     "#itemNounOrMassNoun# merchant",
     "#creatureTypes# hunter",
     "#nonPlaneLocation# emissary",
-    "#massNoun#mancer"
+    "#massNoun#mancer",
+    "[_suffix:dancer,singer,caller,speaker,eater,drinker,fighter,maker,mother,father,brother,sister]#nounCompoundWorthy.capitalize.noSpaces##_suffix#"
   ],
   "characterTitleObjectNoun": [
     "#massNoun#",
@@ -246,7 +249,8 @@
     "sower",
     "stalker",
     "warden",
-    "walker"
+    "walker",
+    "#emotion##verbTransitive.noSpaces.lowercase#er"
   ],
   "characterRace": [
   	"akki",
