second deadly designs gatherer entry

--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -173,7 +173,8 @@
     "Tom LaPille[#malePronouns#]",
     "Lee Sharpe[#malePronouns#]",
     "Scott Larabee[#malePronouns#]",
-    "Gavin Verhey[#malePronouns#]"
+    "Gavin Verhey[#malePronouns#]",
+    "Sheldon Mennery[#malePronouns#]",
   ],
 
   "officialEntityGroup": [
