--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -54,7 +54,7 @@ disqualifyingAction:
 - not waiting for Floral Spuzzem to decide which artifact to destroy
 - attempting to draw the game with Fatespinner
 - attempting to file for compensation
-- improper handling of silverware
+- improperly handling silverware
 - "blatant product placement[_when:, during a feature match, on #their# deck registration sheet]#_when#"
 - convincing #their# opponents to "deck swap"
 - banishing players to the Shadow Realm
