--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -105,7 +105,7 @@
     "Dragon",
     "Eldrazi",
     "Seething",
-    "Oops! All #definingCardname.s#",
+    "Oops! All #definingCardname.sIfNeeded#",
     "Canadian",
     "Cat",
     "Deadguy",
