--- a/src/data/grammar/images/mtg-in-graphics.yaml
+++ b/src/data/grammar/images/mtg-in-graphics.yaml
@@ -5,19 +5,25 @@ inGraphicsText:
 - 'IN GRAPHICS: #_headline#'
 - 'Infographic: #_headline#'
 inGraphicsHeadline:
-- A Surprising Combination
-- Rogue Strategies
-- 'A New Use for #_card1#'
-- Nuts and Bolts
-- The Hot New Tech
-- "#_card2#'s New Partner"
-- 'Overcoming #obstacle.capitalize#'
-- 'How to #_card1# — In Graphics'
-- "#cardCategory.capitalizeAll.s# Everywhere"
-- 'Infinite #creatureTypes.capitalizeAll.s#'
-- 'Break the Game Open with #_card1#'
-- "#_card1# goes on the offensive"
-- 'The Hidden Power of #_card1#'
+# - '[_desc:Surprising,Baffling,Perverse,Shocking,#adj#]#_desc.a.capitalizeAll# Combination'
+# - '[_desc:Rogue,Unconventional,Subtle,Advanced]#_desc# Strategies'
+# - 'A New Use for #_card1#'
+# - 'Nuts and Bolts[_and:, and #cardCategoryTerm.capitalizeAll.s#, and #cardCategory.sIfNeeded.capitalizeAll#, and #pluralNounOrMassNoun.capitalizeAll#, and #emotion.capitalizeAll#]#_and#'
+# - '[_techType:The Hot New,#cardQuality#]#_techType.capitalizeAll# Tech'
+# - "#_card2#'s New [_pal:Partner,Best Friend,Accomplice]#_pal#"
+# - '[_besting:Overcoming,Conquering,Overpowering,Dominating,Defeating,Mastering,#verbTransitiveGerund.capitalizeAll#]#_besting# #obstacle.capitalizeAll#'
+# - 'How to [_what:#_card1#,#_card1#,#cardCategoryTerm#]#_what.capitalizeAll# — In Graphics'
+# - "[_cat:#cardCategory.capitalizeAll#][_categoryHeadline:#_cat.s# Everywhere,Best #_cat.s# in Town]#_categoryHeadline#"
+# - '[_infi:Infinite,Boundless,Enter the,Day of the]#_infi# #creatureTypes.capitalizeAll.s#'
+# - '[_do:Break the Game Open,Dominate the Competition,Save the Day,Make a Splash,Spin to Win]#_do# with #_card1#'
+# - '#_card1# [_doesWhat:goes on the offensive,on the move]#_doesWhat#'
+# - 'The [_hidden:Hidden,Unexpected,Secret][_power:Power,Potential,Value]#_hidden# #_power# of #_card1#'
+# - "#keywordAction.capitalize# [_secondPart:and You'll Win It,for the Moon,Forever,Until the #creatureTypes.s.capitalize# Come Home,and #keywordAction#]#_secondPart#"
+# - "[_what:#keyword#,#planeswalkerFirstName#,#mtgQuestionablePractice#]#_what.capitalizeAll#!"
+# - "All of the [_what:#cardCategory#,#creatureTypes#,#gameConcept#,#gameAccessory#]#_what.s.capitalizeAll#"
+- "One #mood.capitalizeAll# [_what:#creatureTypes#,#creatureTypes#,#cardCategoryTerm#]#_what.capitalizeAll#"
+- "[_actioned:#keywordAction.ed#][_what:Un-#_actioned#,Re-#_actioned#,#_actioned# Again]#_what.capitalizeAll# and It Feels So [_feeling:Good,#adjValue#,#adjChallenging#,#adj#,#cardQuality#]#_feeling.capitalizeAll#"
+- "[_verbing:Navigating]#_verbing# [separator:the][#separator.cardSearchTwoParter(1)#][_what:the #_cardNameSecondPart1#,the #massNoun#,the #placeNoun#,#storyLocation#]#_what.capitalizeAll#"
 inGraphicsStep:
 - 'Cast #_eitherCard#'
 - 'Return #_card1# to your hand with #_card2#'
@@ -35,7 +41,7 @@ inGraphicsStep:
 - 'Throw #_card1# across the table while shouting about #gameConcept#'
 - 'Ask a judge [_otherThing:#_card2#,#keyword#][_question:how #_card1# and #_otherThing# interact,for the oracle text of #_otherThing#]#_question#'
 - 'Look extremely puzzled for #num2-9# minutes'
-- "Gesture to the [_what:collection of PTQ Top 8 pins,mustard and ketchup stains,detailed portrait of #anyPersonality#,collection of #creatureTypes# tokens]#_what# on your playmat"
+- "Gesture to the [_what:collection of PTQ Top 8 pins,mustard and ketchup stains,detailed portrait of #anyPersonality#,collection of #creatureTypes# tokens,tiny #itemNoun.s#]#_what# on your playmat"
 - 'Reveal the [_card:Cheatyface,Cheatyface,Entirely Normal Armchair]#_card# hidden underneath #_card1#'
 - 'Draw #_card2# and gaze #adverb# at it'
 - "Tear #_card1# into pieces and [_where:up your nose,into your ears,into your pockets,into your cheeks like a chipmunk,down the front of your pants][_then:eat it,sprinkle them over your opponent's head,cram them #_where#,frantically try to piece them back together]#_then#"
@@ -65,12 +71,15 @@ inGraphicsStep:
 - 'Offer to sell #_card1# to your opponent for [_price:#priceUSD#,#priceUSD#,a kiss,a song and dance,a sack of #pluralNounOrMassNoun#]#_price#'
 - 'Point to #_card2# and tell your opponent [_guy:guy,gal,fella,dame,dude,jerk,joker,nerd,twit,clown]“save #typeOfCard.a# to deal with this #_guy#.”'
 - "Stick #_card2# into your mouth and [_then:let it hang out like a tongue,swallow it whole,spit it back onto the table,wait for it to get soggy,try to read it with your tongue]#_then#"
-- "Fashion [_headgear:crown,hat,elaborate headdress,sombrero,helmet]#_headgear.a# from copies of #_card2# and place it on [_whose:your,your opponent's,a judge's]#_whose# head"
+- "[_craft:Fashion,Craft,Construct,Assemble]#_craft# [#makeshiftClothing#]#_clothing.a# from copies of #_card2# and #_clothingAdorn# [_whose:your,your,your opponent's,a judge's]#_whose# #_clothingWhere#"
 - "Scoop a handful of #massNoun# out of your pocket and [_then:drop it theatrically onto the table,cram it into your mouth,place it carefully on top of your head,offer it temptingly to your opponent,smear it on your face,pretend it's whispering secrets to you,smear it all over your face]#_then#"
 - "[_make:Pretend to make,Make]#_make# #_card1# and #_card2# “kiss each other”"
 - "Tell your opponent that you lost to #anyPersonality# last round"
 - "[_verb:Insist,Explain,Announce]#_verb# that you're currently [_doingProject:filming a documentary about,writing a book about,conducting a social experiment with]#_doingProject# #_eitherCard#"
 - "[_perform:Perform,Stage,Put on]#_perform# a short “puppet show” with #_card1# and #_card2#"
+- "If you are [_lucky:lucky,smart,charming,skilled,attractive,crazy,powerful,fortunate]#_lucky# enough to [_open:open,be passed,open or be passed,own]#_open# #_card1.a#, cast it."
+- "Cast #_card2# on one of your #cardPermanentType.s# and #randomKeywordAction# thanks to #_card1#"
+- "Cast #_eitherCard# and search for [#cotdCreatureTypeSearch#][_target:#_creatureType#,#cardCategoryTerm#]#_target.a# (e.g. [_targetCard:#_creatureType#,#randomCreatureCard#]#_targetCard#)"
 - "#randomKeywordAction.capitalize#"
 - "#randomKeywordAction.capitalize#"
 - "#randomKeywordAction.capitalize#"
@@ -84,6 +93,11 @@ anyPersonality:
 - "#historicalFigure#"
 - "#character#"
 - "#person#"
+
+makeshiftClothing:
+- "[_clothing:crown,hat,elaborate headdress,sombrero,helmet][_clothingAdorn:place it on][_clothingWhere:head]"
+- "[_clothing:tunic,breastplate,cape,shirt][_clothingAdorn:drape it over,wrap it around,affix it to][_clothingWhere:shoulders,body]"
+- "[_clothing:belt,skirt,codpiece,diaper][_clothingAdorn:wrap it around,fasten it to][_clothingWhere:waist]"
 
 inGraphicsCardMask: "./data/images/cardmask-double.png"
 inGraphicsBacksplash:
