--- a/src/data/grammar/headlines/mtg-gatherer.yaml
+++ b/src/data/grammar/headlines/mtg-gatherer.yaml
@@ -106,7 +106,7 @@
     ],
     "_randomTopic": ["#character#", "the #gameStep#", "#person#" , "#pluralNounOrMassNoun#", "#format#", "#deckArch#"],
     "gameAction": ["look at the top card of your library", "shuffle your library", "reorder your graveyard", "search your library", "untap one or more permanents",
-                    "lose the game", "win the game", "draw the game", "mulligan", "flip a coin", "ignore this ability"],
+                    "lose the game", "win the game", "draw the game", "concede the game", "call a judge", "mulligan", "flip a coin", "ignore this ability"],
     "gameEffectAction": [
         "counter[_actionPastTense:countered]",
         "destroy[_actionPastTense:destroyed]",
